# px09

./: .env.dev  .env.example  .env.prod  .gitignore  LIGHTBOX_TEST.md  README.md  docker-compose.yml  manage.py  pyproject.toml  ruff.toml
accueil/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accueil/management/commands/: test_contact_email.py
accueil/migrations/: 0001_initial.py
commandes/: admin.py  models.py  tests.py  urls.py  views.py
commandes/migrations/: 0001_initial.py
commandes/templates/commandes/: aide_commande.html  commande_expiree.html  commande_non_disponible.html  galerie_commande.html  photo_detail_commande.html
configurations/: admin_apps.py  asgi.py  urls.py  wsgi.py
configurations/settings/: __init__.py  base.py  dev.py  prod.py
galeries/: admin.py  admin_dashboard.py  admin_urls.py  admin_views.py  admin_views_photos.py  apps.py  apps_proxy.py  context_processors.py  middleware.py  models.py  signals.py  urls.py  views.py
galeries/management/commands/: import_photos.py  recalculer_cache_tailles.py  recalculer_tailles.py
galeries/migrations/: 0001_initial.py  0002_add_nom_fichier_to_photo.py  0003_populate_nom_fichier.py  0004_add_configuration_site.py  0005_create_default_configuration.py  0006_alter_collection_options_collection_ordre_manuel_and_more.py  0007_photoversion_taille_fichier_hd_and_more.py  0008_collection_cache_mis_a_jour_le_and_more.py  0009_collection_afficher_details_techniques_and_more.py  0010_accesgalerie_visiteurgalerie.py  0011_configurationsite_langue.py  0012_configurationsite_btn_acces_prive_and_more.py
static/admin/css/: custom-dashboard.css  photo_cover_select.css
static/admin/js/: photo_cover_select.js
static/css/: base.css  contact.css  lightbox.css
static/js/: contact-form.js  lightbox.js  modal.js  reveal.js  theme.js
templates/: base.html
templates/accueil/: contact.html  galerie_detail.html  index.html
templates/admin/: base_site.html  index.html  index.html.backup
templates/admin/dashboard/: index.html
templates/admin/galeries/: attribuer_collection.html  confirmer_suppression.html  photo_ordering.html  upload_photos.html
templates/admin/galeries/galerie/: change_list.html
templates/galeries/: collection_detail.html  galerie_detail.html  photo_detail.html  tableau_bord_prive.html
tests/: test_accueil.py  test_commandes.py  test_contact.py  test_galeries_basic.py  test_settings.py  test_utilisateurs_basic.py
utilisateurs/: admin.py  apps.py  models.py  permissions.py  signals.py  tests.py
utilisateurs/migrations/: 0001_initial.py
