[project]
name = "django-template"
version = "0.1.0"
description = "Django template project with uv, ruff and pytest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=21.0.0",
    "whitenoise>=6.0.0",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.0.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "django-stubs>=4.2.0",
    "types-setuptools>=1.0.0",
    "django-debug-toolbar>=4.0.0",
    "django-extensions>=3.0.0",
]

# Configuration Ruff déplacée vers ruff.toml

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "configurations.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--reuse-db",
    "--nomigrations"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["*.admin"]
disable_error_code = ["type-arg"]

[tool.django-stubs]
django_settings_module = "configurations.settings"
