[project]
name = "django-template"
version = "0.1.0"
description = "Django template project with uv, ruff and pytest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=21.0.0",
    "whitenoise>=6.0.0",
    "pillow>=12.2.0",
    "django-admin-sortable2>=2.3.1",
    "django-imagekit>=5.0.0",
    "pillow-heif>=0.16.0",
    "pyexiv2>=2.13.0",
    "django-lucus>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.0.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.0.0",
    "ruff>=0.1.0",
    "django-debug-toolbar>=4.0.0",
    "django-extensions>=3.0.0",
]

# Configuration Ruff déplacée vers ruff.toml

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "configurations.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--reuse-db",
    "--nomigrations"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["."]
omit = [
    "manage.py",
    "configurations/wsgi.py",
    "configurations/asgi.py",
    ".venv/*",
    "venv/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "staticfiles/*",
    "media/*",
    "*/admin.py",
    "*/signals.py",
    "ztemp/*"
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
